# kcrash

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5CrashConfig.cmake.in  KF6CrashConfig.cmake.in  README.md  StaticMessages.sh  kcrash.categories  metainfo.yaml
autotests/: CMakeLists.txt  coreconfigtest.cpp  kcrashtest.cpp  metadatatest.cpp  restarttest.cpp  restarttest_crasher.cpp  test_crasher.cpp
src/: CMakeLists.txt  Messages.sh  config-kcrash.h.cmake  coreconfig.cpp  coreconfig_p.h  kcrash-index.qdoc  kcrash.cpp  kcrash.h  kcrash.qdoc  kcrash.qdocconf  metadata.cpp  metadata_p.h  strlcpy-fake.c
src/android/: AndroidManifest.xml  CMakeLists.txt  KF6Crash-android-dependencies.xml  build.gradle
src/android/res/values/: strings.xml
src/android/res/values-ar/: strings.xml
src/android/res/values-ca/: strings.xml
src/android/res/values-es/: strings.xml
src/android/res/values-fr/: strings.xml
src/android/res/values-is/: strings.xml
src/android/res/values-it/: strings.xml
src/android/res/values-iw/: strings.xml
src/android/res/values-ka/: strings.xml
src/android/res/values-ko/: strings.xml
src/android/res/values-nl/: strings.xml
src/android/res/values-nn/: strings.xml
src/android/res/values-pt-rBR/: strings.xml
src/android/res/values-ro/: strings.xml
src/android/res/values-sk/: strings.xml
src/android/res/values-sl/: strings.xml
src/android/res/values-tr/: strings.xml
src/android/res/values-ug/: strings.xml
src/android/res/values-uk/: strings.xml
src/android/res/values-zh-rTW/: strings.xml
src/android/src/org/kde/crash/: KCrash.java
src/qml/: CMakeLists.txt  context.cpp  context.h
